--- a/css/layout.css
+++ b/css/layout.css
@@ -435,7 +435,7 @@ fieldset[disabled] .btn-theme {
   left: 0;
   width: 100%;
   height: 100%;
-  background: transparent;
+  background: rgba(0, 0, 0, 0);
   content: " ";
   transition-duration: 300ms;
   transition-property: all;
