--- a/css/layout.css
+++ b/css/layout.css
@@ -166,6 +166,18 @@ h4 {
   text-decoration: none;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.image-corners-green {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  border-radius: 25px;
+  border: 2px solid #04B431;
+}
+
 /*------------------------------------------------------------------
   	[Blockquote]
 ------------------------------------------------------------------*/
@@ -611,7 +623,7 @@ fieldset[disabled] .btn-theme {
 
 .header .logo-wrap {
   display: inline-block;
-  padding: 13px 0;
+  padding: 12px 0;
 }
 
 .header .logo-wrap:focus, .header .logo-wrap:hover {
