--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -119,3 +119,17 @@ h4 { @include font($size: 22px); }
     z-index: 3;
     text-decoration: none;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.image-corners-green {
+    display: block;
+    max-width: 100%;
+    height: auto;
+
+    border-radius: 25px;
+    border: 2px solid #04B431;
+  }
+  
