--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -41,6 +41,7 @@
 @import 'gui/promo-section'; // Promo Section
 @import 'gui/service'; // Service
 @import 'gui/work'; // Work
+@import 'gui/_faq-main-screen'; // Work
 
 
 // Layout
