--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -174,3 +174,8 @@ h4 { @include font($size: 22px); }
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
 }
+
+.item-center {
+    display: flex;
+    align-items: center;
+}
