--- a/sass/gui/_service.scss
+++ b/sass/gui/_service.scss
@@ -46,6 +46,16 @@
 	}
 }
 
+.image-icon {
+	display: block;
+	@include font($size: 30px);
+	color: $color-link-hover;
+	margin-bottom: 30px;
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
+
 .service {
 	background: $color-white;
 	padding: 30px;
