--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -41,8 +41,9 @@
 @import 'gui/promo-section'; // Promo Section
 @import 'gui/service'; // Service
 @import 'gui/work'; // Work
-@import 'gui/_faq-main-screen'; // Work
-
+@import 'gui/_benefits'; // Benefits
+@import 'gui/_faq-main-screen'; // Faq-main-screen
+@import 'gui/faq3'; // Faq3
 
 // Layout
 // =================================================================
