--- a/sass/gui/_benefits.scss
+++ b/sass/gui/_benefits.scss
@@ -3,9 +3,34 @@
 ------------------------------------------------------------------*/
 
 .benefits {
-	.service-element {
-		.service-icon {
+	.card {
+		background: $color-white;
+		padding: 30px;
+	
+		.card-element,
+		.card-info {
+			@include translate3d(0, 0, 0);
+			@include cubic-transition($delay: 0, $duration: 300ms, $property: (all));
+		}
+	
+		.card-icon {
+			display: block;
+			@include font($size: 45px);
 			color: $color-beneficios-item;
+			margin-bottom: 30px;
+		}
+	
+		&:hover {
+			.card-element {
+				opacity: 100%;
+				@include translate3d(0, -40%, 0);
+				// @include cubic-transition($delay: 0, $duration: 300ms, $property: (all));
+			}
+	
+			.card-info {
+				@include translate3d(0, -30%, 0);
+				// @include cubic-transition($delay: 0, $duration: 300ms, $property: (all));
+			}
 		}
 	}
 }
