--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@
 // ==================================
 //
 // Font, line-height, and color for body text, headings, and more.
-
+$root-font-size:                                              			14px !default; // Root font size
 $font-family-base:                                              			Hind, sans-serif !default; // Hind font family
 $font-family-sl-icons:                                              	Simple-Line-Icons !default; // Simple Line Icons third-party icons plugin
 
