--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,12 +11,12 @@ html, html a, body {
     -webkit-font-smoothing: antialiased;
 }
 
-body {
-    font-family: $font-family-base;
+html {
+    font-size: $root-font-size;
 }
 
 p {
-    @include font($size: 15px, $weight: 400, $family: $font-family-base);
+    @include font($size: convertPxToRem(15px), $weight: 400, $family: $font-family-base);
     color: $color-subtitle;
     line-height: 1.4;
     margin-bottom: 15px;
@@ -81,10 +81,10 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-h1 { @include font($size: 40px); }
-h2 { @include font($size: 30px); }
-h3 { @include font($size: 22px); }
-h4 { @include font($size: 22px); }
+h1 { @include font($size: convertPxToRem(40px))}
+h2 { @include font($size: convertPxToRem(34px))}
+h3 { @include font($size: convertPxToRem(22px))}
+h4 { @include font($size: convertPxToRem(22px))}
 
 ::selection {
     color: $color-white;
@@ -122,6 +122,12 @@ h4 { @include font($size: 22px); }
 
 .text-center {
     text-align: center;
+}
+
+.img-center {
+	display: flexbox;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .g-box-shadow__dark-lightest {
