--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -19,6 +19,7 @@
 
 @import 'mixins'; // Mixins
 @import 'variables'; // Variables
+@import 'functions'; // Functions
 
 
 // Base
@@ -44,6 +45,7 @@
 @import 'gui/_benefits'; // Benefits
 @import 'gui/_faq-main-screen'; // Faq-main-screen
 @import 'gui/faq3'; // Faq3
+@import 'gui/faq5'; // Faq5
 
 // Layout
 // =================================================================
