--- a/css/layout.css
+++ b/css/layout.css
@@ -26,16 +26,25 @@
   	[The "base.scss" contains basic default element styles
   		(colors, typography, margins & padding).]
 ------------------------------------------------------------------*/
-html {
-  overflow-x: hidden;
-}
-
 html, html a, body {
   -webkit-font-smoothing: antialiased;
 }
 
 html {
   font-size: 14px;
+  overflow-x: hidden;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 992px) {
+  html {
+    font-size: 14px;
+  }
 }
 
 p {
@@ -364,6 +373,24 @@ fieldset[disabled] .btn-theme {
   font-size: 13px;
   font-weight: 600;
   padding: 15px 30px;
+}
+
+/*------------------------------------------------------------------
+  	[Company]
+------------------------------------------------------------------*/
+.company .img-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .company .img-text-container {
+    display: unset;
+  }
+  .company .img-text-container .img {
+    text-align: right;
+  }
 }
 
 /*------------------------------------------------------------------
