--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,7 @@
 //
 // Font, line-height, and color for body text, headings, and more.
 $root-font-size:                                              			14px !default; // Root font size
+$root-font-sm-size:                                                     12px !default; // Root font sm size
 $font-family-base:                                              			Hind, sans-serif !default; // Hind font family
 $font-family-sl-icons:                                              	Simple-Line-Icons !default; // Simple Line Icons third-party icons plugin
 
