--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -37,7 +37,7 @@
 
 // Gui
 // =================================================================
-
+@import 'gui/company'; // Faq5
 @import 'gui/pricing'; // Pricing
 @import 'gui/promo-section'; // Promo Section
 @import 'gui/service'; // Service
