--- a/css/layout.css
+++ b/css/layout.css
@@ -1,19 +1,4 @@
 @charset "UTF-8";
-/*----------------------------------------------------------------------
-
-	MASTER STYLESHEET
-
-	Project:        Metronic "Asentus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-	Version:        1.0
-	Author:         KeenThemes
-	Primary use:    Corporate, Business Themes.
-	Email:			support@keenthemes.com
-	Follow: 		http://www.twitter.com/keenthemes
-	Like: 			http://www.facebook.com/keenthemes
-	Website:		http://www.keenthemes.com
-	Premium:		Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-
------------------------------------------------------------------------*/
 /* eg: @include user-select(none); */
 /* eg: @include rotate(45deg); */
 /* eg: @include translate3d(0,0,0); */
@@ -583,7 +568,7 @@ fieldset[disabled] .btn-theme {
 .benefits .card .card-icon {
   display: block;
   font-size: 3.21429rem;
-  color: #17bed27a;
+  color: #3c763d;
   margin-bottom: 30px;
 }
 
@@ -656,7 +641,7 @@ fieldset[disabled] .btn-theme {
 
 .what-used-for .row .card .service-faq3 .service-element {
   font-size: 3.21429rem;
-  color: #17bed27a;
+  color: #3c763d;
 }
 
 .what-used-for .row .card .service-faq3 .service-element-faq3,
@@ -733,24 +718,28 @@ footer .footer-copyright .row {
 /*------------------------------------------------------------------
   	[Header]
 ------------------------------------------------------------------*/
-/* Fixed Top */
-.navbar-fixed-top .navbar-collapse {
-  max-height: 100%;
+/* Collapse */
+.header .collapse {
+  margin-left: 3rem;
+  display: flex !important;
+  align-items: center;
 }
 
 /* Navbar */
 .header .navbar {
+  min-height: 5.71429rem;
   margin-bottom: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  transition-duration: 300ms;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.73);
+}
+
+.header .navbar .container {
+  display: flex;
 }
 
 /* Navbar Toggle */
 .header .navbar-toggle {
-  width: 25px;
-  height: 25px;
+  width: 1.78571rem;
+  height: 1.78571rem;
   border: none;
   padding: 0;
   margin: 35px 0;
@@ -758,8 +747,8 @@ footer .footer-copyright .row {
 
 .header .navbar-toggle .toggle-icon {
   position: relative;
-  width: 21px;
-  height: 1px;
+  width: 1.5rem;
+  height: 0.07143rem;
   display: inline-block;
   background: #515769;
   transition-duration: 300ms;
@@ -775,8 +764,8 @@ footer .footer-copyright .row {
 }
 
 .header .navbar-toggle .toggle-icon:before {
-  width: 10px;
-  height: 1px;
+  width: 0.71429rem;
+  height: 0.07143rem;
   bottom: 10px;
   -webkit-transform: rotate(0);
   -moz-transform: rotate(0);
@@ -787,8 +776,8 @@ footer .footer-copyright .row {
 }
 
 .header .navbar-toggle .toggle-icon:after {
-  width: 16px;
-  height: 1px;
+  width: 1.14286rem;
+  height: 0.07143rem;
   top: -5px;
   -webkit-transform: rotate(0);
   -moz-transform: rotate(0);
@@ -806,8 +795,8 @@ footer .footer-copyright .row {
 }
 
 .header .navbar-toggle:hover .toggle-icon:before, .header .navbar-toggle:hover .toggle-icon:after {
-  width: 21px;
-  height: 1px;
+  width: 1.5rem;
+  height: 0.07143rem;
   background: #17bed2;
   transition-duration: 300ms;
   transition-property: all;
@@ -818,56 +807,34 @@ footer .footer-copyright .row {
   background: rgba(81, 87, 105, 0);
 }
 
-/* Navbar Logo */
+.header {
+  background-color: white;
+  /* Navbar Logo */
+}
+
 .header .logo {
-  width: 100px;
-  height: 100px;
-  float: left;
-  max-height: 95px;
-  line-height: 65px;
+  width: 7.14286rem;
+  height: 7.14286rem;
+  display: flex;
+  align-items: center;
 }
 
-.header .logo-wrap {
-  display: inline-block;
-  padding: 12px 0;
-}
-
-.header .logo-wrap:focus, .header .logo-wrap:hover {
-  text-decoration: none;
-}
-
-.header .logo-img {
-  display: inline-block;
-  width: 80%;
+.header .logo .logo-wrap .logo-img {
+  width: 10rem;
   height: auto;
-  max-width: 100%;
   max-height: 100%;
-  vertical-align: middle;
 }
 
-.header .logo-img-main {
-  display: inline-block;
-  width: 3.4rem;
+.header .menu-container.social-media {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.header .menu-container.social-media .social-media-wrap .social-media-img {
+  margin: 0.25rem;
+  width: 3rem;
   height: auto;
-  transition-duration: 400ms;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-}
-
-.header .logo-img-active {
-  display: none;
-  width: 3.4rem;
-  height: auto;
-  transition-duration: 400ms;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-}
-
-/* Navbar */
-.header .navbar-nav {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
 }
 
 /* Nav */
@@ -877,14 +844,8 @@ footer .footer-copyright .row {
 }
 
 .header .nav-item:last-child .nav-item-child {
-  padding-right: 0;
-}
-
-.header .nav-item .nav-item-hover.active:after {
-  opacity: 1;
-  transition-duration: 400ms;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+  color: #3c763d;
+  font-weight: 800;
 }
 
 .header .nav-item:hover .nav-item-hover:after {
@@ -895,15 +856,11 @@ footer .footer-copyright .row {
 }
 
 .header .nav-item-child {
-  position: relative;
-  display: block;
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 1.14286rem;
   font-family: Hind, sans-serif;
-  color: #fff;
+  color: #515769;
   text-transform: uppercase;
-  line-height: 55px;
-  padding: 20px;
+  padding-left: 20px;
   transition-duration: 300ms;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
@@ -962,13 +919,6 @@ footer .footer-copyright .row {
   .header .menu-container:after {
     clear: both;
   }
-  /* Logo */
-  .header .logo .logo-img-main {
-    display: none;
-  }
-  .header .logo .logo-img-active {
-    display: inline-block;
-  }
   /* Navbar Nav */
   .header .nav-item-child {
     color: #515769;
@@ -1010,35 +960,6 @@ footer .footer-copyright .row {
   /* Navbar */
   .header .navbar-nav-right {
     float: right;
-  }
-}
-
-/* Page On Scroll */
-@media (min-width: 992px) {
-  .page-on-scroll .header .navbar {
-    background: #fff;
-    border-bottom-color: #f0f0f0;
-    transition-duration: 300ms;
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-  }
-  .page-on-scroll .header .logo-img-main {
-    display: none;
-    transition-duration: 400ms;
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-  }
-  .page-on-scroll .header .logo-img-active {
-    display: inline-block;
-    transition-duration: 400ms;
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-  }
-  .page-on-scroll .header .nav-item-child {
-    color: #515769;
-    transition-duration: 300ms;
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
   }
 }
 
@@ -1195,12 +1116,21 @@ footer .footer-copyright .row {
   transform: translate3d(0, -50%, 0);
 }
 
+.carousel-title,
+.carousel-sub-title {
+  text-shadow: 1px 1px 2px #000000;
+}
+
 .carousel-title {
   font-size: 80px;
   font-weight: 700;
   color: #fff;
   line-height: 1.1;
   text-transform: uppercase;
+}
+
+.carousel-sub-title {
+  color: #fff;
 }
 
 @media (max-width: 768px) {
