--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,7 +16,7 @@ $color-subtitle:                                                        #a6a7aa 
 $color-link:                                                        		#81848f !default;
 $color-link-hover:                                                      #999caa !default;
 $color-sky-light:                                                      	#fafafa !default;
-$color-beneficios-item:                                                #17bed27a!default;
+$color-beneficios-item:                                                #3c763d!default;
 // Spacer
 $ver-center-block-height:														400px !default;
 
