--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -17,6 +17,7 @@ $color-link:                                                        		#81848f !d
 $color-link-hover:                                                      #999caa !default;
 $color-sky-light:                                                      	#fafafa !default;
 $color-beneficios-item:                                                #3c763d!default;
+$color-green:                                                           #4d897c!default;
 // Spacer
 $ver-center-block-height:														400px !default;
 
