--- a/sass/gui/_company.scss
+++ b/sass/gui/_company.scss
@@ -2,15 +2,9 @@
   	[Company]
 ------------------------------------------------------------------*/
 .company {
-	.img-text-container {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		@media (min-width: $screen-sm-min) {
-			display: unset;
-			.img {
-				text-align: right;
-			}
+	@media (min-width: $screen-sm-min) {
+		&-img-container {
+			width: 90%;
 		}
 	}
 }
