--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -21,7 +21,7 @@
 
 // Gui
 // =================================================================
-@import 'gui/company'; // Faq5
+@import 'gui/company'; // company
 @import 'gui/pricing'; // Pricing
 @import 'gui/promo-section'; // Promo Section
 @import 'gui/service'; // Service
