--- a/sass/gui/_service.scss
+++ b/sass/gui/_service.scss
@@ -1,12 +1,20 @@
 /*------------------------------------------------------------------
-  	[Service]
+  	[Services]
 ------------------------------------------------------------------*/
-.servicios {
-	article {
-		&.article {
+.services {
+	.row {
+		display: flex;
+		flex-wrap: wrap;
+		&-card {
 			border-radius: 5px;
 			overflow: hidden;
 			background-color: white;
+			// check
+			// .arrow {
+			// 	margin: 0.25rem;
+			// 	width: 3rem;
+			// 	height: auto;
+			// }
 		}
 	}
 }
