--- a/sass/gui/_company.scss
+++ b/sass/gui/_company.scss
@@ -4,7 +4,14 @@
 .company {
 	@media (min-width: $screen-sm-min) {
 		&-img-container {
-			width: 90%;
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-end;
+			width: 100%;
+			.img {
+				width: 75%;
+			}
 		}
 	}
 }
